Cambios en frontend graficos

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -36,7 +36,7 @@
       "RATING": "Bewertung",
       "FORMS": "Formulare",
       "TABLES": "Tabellen",
-      "CHARTS": "Charts"
+      "REPORTS": "Reports"
     },
     "APPLICATIONS": {
       "TITLE": "Anwendungen",
